# aegis-auth-sdk

./: .gitignore  README.en-us.md  README.md  README.zh-cn.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: SDK.md
src/aegis_auth_sdk/: __init__.py  client.py  exceptions.py  response.py
src/aegis_auth_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
