[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-auth-sdk"
version = "0.0.6"
description = "Aegis Authentication SDK for Python."
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/sevck/aegis-auth-sdk"
"Bug Tracker" = "https://github.com/sevck/aegis-auth-sdk/issues"
